Alterando a função de sorteio para retirar da lista quem já foi sorteado

--- a/sorteio/templates/sorteio.html
+++ b/sorteio/templates/sorteio.html
@@ -4,7 +4,9 @@
 <form align='center' class="pure-form pure-form-stacked" method="post">
     {% csrf_token %}
     {% if success %}
-    <h1>{{ sorteado }} {{ telefone }}</h1>
+        <h1>{{ sorteado }} {{ telefone }}</h1>
+    {% else %}
+        <h1>Não tem mais ninguém para sortear</h1>
     {% endif %}
     <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Sortear</button>
