Retirando o rodapé das páginas

--- a/inscricao/templates/base.html
+++ b/inscricao/templates/base.html
@@ -16,9 +16,9 @@
 </div>
 <div class="content">
     {% block content %}{% endblock %}
-    <div class="footer">
+    <!--<div class="footer">
        Cuscuz HQ ©2022
-    </div>
+    </div>-->
 </div>
 <script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js"></script>
 </body>
