--- a/inscricao/static/css/styles.css
+++ b/inscricao/static/css/styles.css
@@ -118,6 +118,11 @@ body .primary-button {
     text-align: center;
     padding: 1em;
     font-size: 80%;
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    position: absolute;
+    width: 100%;
 }
 ul.errorlist {
     margin: 0;
