--- a/inscricao/static/css/styles.css
+++ b/inscricao/static/css/styles.css
@@ -160,7 +160,7 @@ form.pure-form-aligned ul.errorlist li {
     margin-bottom: 1em;
 }
 .btn-primary{
-    background-color: #2a2829;
+    background-color: #e30112;
     color: white;
     padding: 0.5em 2em;
     border-radius: 5px;
