--- a/sorteio/templates/sorteio.html
+++ b/sorteio/templates/sorteio.html
@@ -13,7 +13,7 @@
         {% endif %}
     {% endif %}
     <div class="pure-controls">
-        <button type="submit" class="pure-button pure-button-primary">Sortear</button>
+        <button type="submit" class="btn btn-primary mt-4">Sortear</button>
     </div>
 </form>
 {% endblock %}
