--- a/inscricao/static/css/styles.css
+++ b/inscricao/static/css/styles.css
@@ -2,6 +2,8 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body {
     margin: 0 auto;
@@ -20,9 +22,10 @@ a {
     background-image: url(../img/logo.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 65%;
+    background-size: 55%;
     background-position: center;
     position: absolute;
+    padding-top: 4;
     z-index: -1;
     top: 0;
     left: 0;
@@ -31,62 +34,11 @@ a {
     opacity: 0.3; 
 }
 
-.l-box {
-    padding: 1em;
-}
 .header {
-    margin: 0 0;
-}
-.header .pure-menu {
-    padding: 0.5em;
+    padding: 0.6em;
     background-color: #2a2829;
 }
-.header .pure-menu a {
-    color: #fff;
-}
-.header .pure-menu li a:hover,
-.header .pure-menu li a:focus {
-    background: none;
-    border: none;
-    color: #AECFE5;
-}
-.header .pure-menu-heading {
-    float: left;
-}
-.header ul {
-    float: right;
-}
-.home-menu {
-    padding: 0.5em;
-    text-align: left;
-    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
-}
-.home-menu.pure-menu-open {
-    background: #2d3e50;
-}
-.pure-menu.pure-menu-open.pure-menu-fixed {
-    border-bottom: none;
-    z-index: 4;
-}
-.home-menu .pure-menu-heading {
-    color: white;
-    font-weight: 400;
-    font-size: 120%;
-}
 
-.home-menu .pure-menu-selected a {
-    color: white;
-}
-
-.home-menu a {
-    color: #6FBEF3;
-}
-.home-menu li a:hover,
-.home-menu li a:focus {
-    background: none;
-    border: none;
-    color: #AECFE5;
-}
 body .primary-button {
     background: #02a6eb;
     color: #fff;
@@ -204,4 +156,32 @@ ul.breadcrumb li {
 ul.breadcrumb li a {
     display: inline-block;
     padding: 0.3em 0.7em;
+}
+
+label{
+    font-weight: bold !important;
+}
+
+@media only screen and (max-width: 800px) {
+    .bg-body {
+      background-size: 65%;
+    }
+}
+  
+@media only screen and (max-width: 600px) {
+    .bg-body {
+        background-size: 75%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .bg-body {
+        background-size: 85%;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .bg-body {
+        background-size: 95%;
+    }
 }
