--- a/inscricao/templates/base.html
+++ b/inscricao/templates/base.html
@@ -7,18 +7,19 @@
     <meta name="description" content="Cuscuz HQ" />
     <title>Cuscuz HQ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 </head>
 <body>
-    <div class="header mt-2"></div>
-    <div class="content">
+    <div class="header mt-0"></div>
+    <div class="content d-flex justify-content-center align-items-center">
         {% block content %}{% endblock %}
         <!--<div class="footer">
         Cuscuz HQ ©2022
         </div>-->
     </div>
-    <div class=bg-body></div>
+    <div class="bg-body" ></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
     crossorigin="anonymous"></script>
