--- a/inscricao/templates/base.html
+++ b/inscricao/templates/base.html
@@ -10,6 +10,7 @@
     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="shortcut icon" href="{% static 'img/logo.png' %}">
 </head>
 <body>
     <div class="header mt-0"></div>
