--- a/inscricao/templates/cospobre.html
+++ b/inscricao/templates/cospobre.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="form col-10 col-sm-10 col-md-6 col-lg-6">
     <h1 align='center'> Concurso de Cospobre - Cuscuz HQ</h1>
-    <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post">
+    <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% if success %}
         <p class="alert alert-success">Inscrição realizada com sucesso</p>
