--- a/inscricao/templates/cospobre.html
+++ b/inscricao/templates/cospobre.html
@@ -11,8 +11,48 @@
         <p class="alert alert-success">Inscrição realizada com sucesso</p>
         {% endif %}
         <fieldset>
-            {{ form.non_field_errors }}
-            {{ form|bootstrap }}
+            <div class="form-group">
+                {{form.nome.erros}}
+                <label for="nome" class="control-label">Nome</label>
+                <div class=" ">
+                    <input type="text" name="nome" maxlength="150" class="form-control" required id="id_nome">
+                </div>
+            </div>
+            <div class="form-group">
+                {{form.telefone.erros}}
+                <label for="telefone" class="control-label">Telefone</label>
+                <div class=" ">
+                    <input type="text" name="telefone" maxlength="20" class="form-control" required id="id_telefone">
+                </div>
+            </div>
+            <div class="form-group">
+                {{form.email.erros}}
+                <label for="email" class="control-label">E-mail</label>
+                <div class=" ">
+                    <input type="text" name="email" maxlength="150" class="form-control" required id="id_email">
+                </div>
+            </div>
+            <div class="form-group">
+                {{form.personagem.erros}}
+                <label for="personagem" class="control-label">Personagem</label>
+                <div class=" ">
+                    <input type="text" name="personagem" maxlength="150" class="form-control" required id="id_personagem">
+                </div>
+            </div>
+            <div class="form-group">
+                {{form.imagem.erros}}
+                <label for="imagem" class="control-label">Imagem</label>
+                <div class=" ">
+                    <input type="file" name="imagem" accept="imagem/*" required id="id_imagem">
+                </div>
+            </div>
+            <div class="form-group">
+                {{form.som.erros}}
+                <label for="som" class="control-label">Música</label>
+                <div class=" ">
+                    <input type="file" name="som" id="id_som">
+                </div>
+            </div>
             <div align='center'  class="form-label">
                 <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
             </div>
