--- a/inscricao/templates/inscricao.html
+++ b/inscricao/templates/inscricao.html
@@ -10,8 +10,27 @@
         <p class="alert alert-success">Inscrição realizada com sucesso</p>
         {% endif %}
         <fieldset>
-            {{ form.non_field_errors }}
-            {{ form|bootstrap }}
+            <div class="form-group">
+                {{form.nome.erros}}
+                <label for="nome" class="control-label">Nome</label>
+                <div class=" ">
+                    <input type="text" name="nome" maxlength="150" class="form-control" required id="id_nome">
+                </div>
+            </div>
+            <div class="form-group">
+                {{form.telefone.erros}}
+                <label for="telefone" class="control-label">Telefone</label>
+                <div class=" ">
+                    <input type="text" name="telefone" maxlength="20" class="form-control" required id="id_telefone">
+                </div>
+            </div>
+            <div class="form-group">
+                {{form.email.erros}}
+                <label for="email" class="control-label">E-mail</label>
+                <div class=" ">
+                    <input type="text" name="email" maxlength="150" class="form-control" required id="id_email">
+                </div>
+            </div>
             <div align='center'  class="form-label">
                 <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
             </div>
