--- a/inscricao/templates/base.html
+++ b/inscricao/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header mt-0"></div>
     <div class="bg-body" ></div>
-    <div class="content d-flex justify-content-center align-items-center">
+    <div class="content d-flex">
         {% block content %}{% endblock %}
         <!--<div class="footer">
         Cuscuz HQ ©2022
