--- a/inscricao/templates/artistas.html
+++ b/inscricao/templates/artistas.html
@@ -1,106 +1,119 @@
 {% extends "base.html" %}
 {% load bootstrap %}
+{% load static %}
 
 {% block content %}
-<div class="form col-10 col-sm-10 col-md-6 col-lg-6">
-    <h1 align='center'>Travessa dos Artistas</br>
-    {{ edition }}º Cuscuz HQ</h1>
-    <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% if success %}
-        <p class="alert alert-success">Inscrição realizada com sucesso</p>
-        {% endif %}
-        {{ form.non_field_errors }}
-        <fieldset>
-            <div class="form-group">
-                {{form.nome.erros}}
-                <label for="nome" class="control-label">Nome</label>
-                <div class=" ">
-                    <input type="text" name="nome" maxlength="150" class="form-control" required id="id_nome">
+<div class="alinhamento">
+    <div class="form col-10 col-sm-10 col-md-6 col-lg-6">
+        <h1 align='center'>Travessa dos Artistas</br>
+        {{ edition }}º Cuscuz HQ</h1>
+        <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% if success %}
+            <p class="alert alert-success">Inscrição realizada com sucesso</p>
+            {% endif %}
+            {{ form.non_field_errors }}
+            <fieldset>
+                <div class="form-group">
+                    {{form.nome.erros}}
+                    <label for="nome" class="control-label">Nome</label>
+                    <div class=" ">
+                        <input type="text" name="nome" maxlength="150" class="form-control" required id="id_nome">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.telefone.erros}}
-                <label for="telefone" class="control-label">Telefone (WhatsApp)</label>
-                <div class=" ">
-                    <input type="text" name="telefone" maxlength="20" class="form-control" required id="id_telefone">
+                <div class="form-group">
+                    {{form.telefone.erros}}
+                    <label for="telefone" class="control-label">Telefone (WhatsApp)</label>
+                    <div class=" ">
+                        <input type="text" name="telefone" maxlength="20" class="form-control" required id="id_telefone">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.email.erros}}
-                <label for="email" class="control-label">E-mail</label>
-                <div class=" ">
-                    <input type="text" name="email" maxlength="150" class="form-control" required id="id_email">
+                <div class="form-group">
+                    {{form.email.erros}}
+                    <label for="email" class="control-label">E-mail</label>
+                    <div class=" ">
+                        <input type="text" name="email" maxlength="150" class="form-control" required id="id_email">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.experiencia.erros}}
-                <label for="experiencia" class="control-label">Experiência Artistíca (em meses)</label>
-                <div class=" ">
-                    <input type="number" name="experiencia" class="form-control" required id="id_experiencia">
+                <div class="form-group">
+                    {{form.experiencia.erros}}
+                    <label for="experiencia" class="control-label">Experiência Artistíca (em meses)</label>
+                    <div class=" ">
+                        <input type="number" name="experiencia" class="form-control" required id="id_experiencia">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.obrasPublicadas.erros}}
-                <label for="obrasPublicadas" class="control-label">Quantidade de Obras Publicadas</label>
-                <div class=" ">
-                    <input type="number" name="obrasPublicadas" class="form-control" required id="id_obrasPublicadas">
+                <div class="form-group">
+                    {{form.obrasPublicadas.erros}}
+                    <label for="obrasPublicadas" class="control-label">Quantidade de Obras Publicadas</label>
+                    <div class=" ">
+                        <input type="number" name="obrasPublicadas" class="form-control" required id="id_obrasPublicadas">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.obrasFuturas.erros}}
-                <label for="obrasFuturas" class="control-label">Obras Lançadas Até a Data do Evento</label>
-                <label for="obrasFuturas" class="control-label">Incluir Título</label>
-                <div class=" ">
-                    <textarea name="obrasFuturas" cols="40" rows="10" maxlength="400" class="form-control" required id="id_obrasFuturas"></textarea>
+                <div class="form-group">
+                    {{form.obrasFuturas.erros}}
+                    <label for="obrasFuturas" class="control-label">Obras Lançadas Até a Data do Evento</label>
+                    <label for="obrasFuturas" class="control-label">Incluir Título</label>
+                    <div class=" ">
+                        <textarea name="obrasFuturas" cols="40" rows="10" maxlength="400" class="form-control" required id="id_obrasFuturas"></textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.instagram.erros}}
-                <label for="instagram" class="control-label">Instagram</label>
-                <div class=" ">
-                    <input type="text" name="instagram" maxlength="200" class="form-control" id="id_instagram">
+                <div class="form-group">
+                    {{form.instagram.erros}}
+                    <label for="instagram" class="control-label">Instagram</label>
+                    <div class=" ">
+                        <input type="text" name="instagram" maxlength="200" class="form-control" id="id_instagram">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.facebook.erros}}
-                <label for="facebook" class="control-label">Facebook</label>
-                <div class=" ">
-                    <input type="text" name="facebook" maxlength="200" class="form-control" id="id_facebook">
+                <div class="form-group">
+                    {{form.facebook.erros}}
+                    <label for="facebook" class="control-label">Facebook</label>
+                    <div class=" ">
+                        <input type="text" name="facebook" maxlength="200" class="form-control" id="id_facebook">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.devianart.erros}}
-                <label for="devianart" class="control-label">Devianart</label>
-                <div class=" ">
-                    <input type="text" name="devianart" maxlength="200" class="form-control" id="id_devianart">
+                <div class="form-group">
+                    {{form.devianart.erros}}
+                    <label for="devianart" class="control-label">Devianart</label>
+                    <div class=" ">
+                        <input type="text" name="devianart" maxlength="200" class="form-control" id="id_devianart">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.blog.erros}}
-                <label for="blog" class="control-label">Blog</label>
-                <div class=" ">
-                    <input type="text" name="blog" maxlength="200" class="form-control" id="id_blog">
+                <div class="form-group">
+                    {{form.blog.erros}}
+                    <label for="blog" class="control-label">Blog</label>
+                    <div class=" ">
+                        <input type="text" name="blog" maxlength="200" class="form-control" id="id_blog">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.outraRedeSocial.erros}}
-                <label for="outraRedeSocial" class="control-label">Outra Rede Social</label>
-                <div class=" ">
-                    <input type="text" name="outraRedeSocial" maxlength="200" class="form-control" id="id_outraRedeSocial">
+                <div class="form-group">
+                    {{form.outraRedeSocial.erros}}
+                    <label for="outraRedeSocial" class="control-label">Outra Rede Social</label>
+                    <div class=" ">
+                        <input type="text" name="outraRedeSocial" maxlength="200" class="form-control" id="id_outraRedeSocial">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.arquivos.erros}}
-                <label for="arquivos" class="control-label">Trabalhos Já Feitos (limitado a 100Mb)</label>
-                <div class=" ">
-                    <input type="file" name="arquivos" id="id_arquivos">
+                <div class="form-group">
+                    {{form.arquivos.erros}}
+                    <label for="arquivos" class="control-label">Trabalhos Já Feitos (limitado a 100Mb)</label>
+                    <div class=" ">
+                        <input type="file" name="arquivos" id="id_arquivos">
+                    </div>
                 </div>
-            </div>
-            <div align='center'  class="form-label">
-                <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
-            </div>
-        </fieldset>
-    </form>
+                <div align='center'  class="form-label">
+                    <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
+<div class="edital">
+    <div class="alinhamento2">
+        <a href="{% static 'documents/Edital_CHAMAMENTO_10º_Cuscuz_HQ.pdf' %}" download="Edital Artistas 10º Cuscuz HQ">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-arrow-down-fill" viewBox="0 0 16 16">
+                <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z"/>
+            </svg>
+        </a>
+        <h3>Edital</h3>
+    </div>
 </div>
 {% endblock %}
