--- a/inscricao/templates/inscricao.html
+++ b/inscricao/templates/inscricao.html
@@ -2,39 +2,41 @@
 {% load bootstrap %}
 
 {% block content %}
-<div class="form col-10 col-sm-10 col-md-6 col-lg-6">
-    <h1 align='center'> Inscrição do {{ edition }}º Cuscuz HQ</h1>
-    <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post">
-        {% csrf_token %}
-        {% if success %}
-        <p class="alert alert-success">Inscrição realizada com sucesso</p>
-        {% endif %}
-        <fieldset>
-            <div class="form-group">
-                {{form.nome.erros}}
-                <label for="nome" class="control-label">Nome</label>
-                <div class=" ">
-                    <input type="text" name="nome" maxlength="150" class="form-control" required id="id_nome">
+<div class="alinhamento">
+    <div class="form col-10 col-sm-10 col-md-6 col-lg-6">
+        <h1 align='center'> Inscrição do {{ edition }}º Cuscuz HQ</h1>
+        <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post">
+            {% csrf_token %}
+            {% if success %}
+            <p class="alert alert-success">Inscrição realizada com sucesso</p>
+            {% endif %}
+            <fieldset>
+                <div class="form-group">
+                    {{form.nome.erros}}
+                    <label for="nome" class="control-label">Nome</label>
+                    <div class=" ">
+                        <input type="text" name="nome" maxlength="150" class="form-control" required id="id_nome">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.telefone.erros}}
-                <label for="telefone" class="control-label">Telefone</label>
-                <div class=" ">
-                    <input type="text" name="telefone" maxlength="20" class="form-control" required id="id_telefone">
+                <div class="form-group">
+                    {{form.telefone.erros}}
+                    <label for="telefone" class="control-label">Telefone</label>
+                    <div class=" ">
+                        <input type="text" name="telefone" maxlength="20" class="form-control" required id="id_telefone">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                {{form.email.erros}}
-                <label for="email" class="control-label">E-mail</label>
-                <div class=" ">
-                    <input type="text" name="email" maxlength="150" class="form-control" required id="id_email">
+                <div class="form-group">
+                    {{form.email.erros}}
+                    <label for="email" class="control-label">E-mail</label>
+                    <div class=" ">
+                        <input type="text" name="email" maxlength="150" class="form-control" required id="id_email">
+                    </div>
                 </div>
-            </div>
-            <div align='center'  class="form-label">
-                <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
-            </div>
-        </fieldset>
-    </form>
+                <div align='center'  class="form-label">
+                    <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </div>
 {% endblock %}
