Alterando tabela dos artista para fliq

--- a/inscricao/templates/artistas.html
+++ b/inscricao/templates/artistas.html
@@ -54,7 +54,7 @@
                     <label for="obrasFuturas" class="control-label">Obras Lançadas Até a Data do Evento</label>
                     <label for="obrasFuturas" class="control-label">Incluir Título</label>
                     <div class=" ">
-                        <textarea name="obrasFuturas" cols="40" rows="10" maxlength="400" class="form-control" required id="id_obrasFuturas"></textarea>
+                        <textarea name="obrasFuturas" cols="40" rows="10" maxlength="400" class="form-control" id="id_obrasFuturas"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div align='center'  class="form-label">
-                    <button type="submit" class="btn btn-primary mt-4" disabled>Cadastrar Inscrição</button>
+                    <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
                 </div>
             </fieldset>
         </form>
@@ -108,7 +108,7 @@
 </div>
 <div class="edital">
     <div class="alinhamento2">
-        <a href="{% static 'documents/Edital_CHAMAMENTO_10º_Cuscuz_HQ.pdf' %}" download="Edital Artistas 10º Cuscuz HQ">
+        <a href="{% static 'documents/Edital_CHAMAMENTO_FLIQ_2022.pdf' %}" download="Edital Artistas FLiQ 11 Anos">
             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-arrow-down-fill" viewBox="0 0 16 16">
                 <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z"/>
             </svg>
