--- a/inscricao/templates/artistas.html
+++ b/inscricao/templates/artistas.html
@@ -6,7 +6,7 @@
 <div class="alinhamento">
     <div class="form col-10 col-sm-10 col-md-6 col-lg-6">
         <h1 align='center'>Travessa dos Artistas</br>
-        {{ edition }}º Cuscuz HQ</h1>
+        FLiQ 11 Anos</h1>
         <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% if success %}
