--- a/inscricao/templates/cosplay.html
+++ b/inscricao/templates/cosplay.html
@@ -52,7 +52,7 @@
                     {{form.som.erros}}
                     <label for="som" class="control-label">Música</label>
                     <div class=" ">
-                        <input type="file" name="som" required id="id_som">
+                        <input type="file" name="som" accept="audio/*" required id="id_som">
                     </div>
                 </div>
                 <div class="form-group">
