--- a/inscricao/templates/artistas.html
+++ b/inscricao/templates/artistas.html
@@ -6,7 +6,7 @@
 <div class="alinhamento">
     <div class="form col-10 col-sm-10 col-md-6 col-lg-6">
         <h1 align='center'>Travessa dos Artistas</br>
-        FLiQ 11 Anos</h1>
+        {{ edition }}º Cuscuz HQ</h1>
         <form align='left' class="col-8 m-auto pt-3 pb-2 text-left" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% if success %}
@@ -108,7 +108,7 @@
 </div>
 <div class="edital">
     <div class="alinhamento2">
-        <a href="{% static 'documents/Edital_CHAMAMENTO_FLIQ_2022.pdf' %}" download="Edital Artistas FLiQ 11 Anos">
+        <a href="{% static 'documents/EDITAL_TRAVESSA_DOS_ARTISTAS_11º_Cuscuz_HQ.pdf' %}" download="Edital Artistas FLiQ 11 Anos">
             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-arrow-down-fill" viewBox="0 0 16 16">
                 <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z"/>
             </svg>
