--- a/inscricao/templates/cospobre.html
+++ b/inscricao/templates/cospobre.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div align='center'  class="form-label">
-                    <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
+                    <button type="submit" class="btn btn-primary mt-4" disabled>Cadastrar Inscrição</button>
                 </div>
             </fieldset>
         </form>
