--- a/inscricao/templates/cospobre.html
+++ b/inscricao/templates/cospobre.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div align='center'  class="form-label">
-                    <button type="submit" class="btn btn-primary mt-4" disabled>Cadastrar Inscrição</button>
+                    <button type="submit" class="btn btn-primary mt-4">Cadastrar Inscrição</button>
                 </div>
             </fieldset>
         </form>
@@ -71,7 +71,7 @@
 </div>
 <div class="edital">
     <div class="alinhamento2">
-        <a href="{% static 'documents/EDITAL_COSPOBRE_11º_Cuscuz_HQ.pdf' %}" download="Edital Cospobre 11º Cuscuz HQ">
+        <a href="{% static 'documents/EDITAL_COSPOBRE_12º_Cuscuz_HQ.pdf' %}" download="Edital Cospobre 11º Cuscuz HQ">
             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-arrow-down-fill" viewBox="0 0 16 16">
                 <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z"/>
             </svg>
